--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 body {
-  font-family: "Roboto", "Raleway" sans-serif;
+  font-family: "Roboto", "Raleway", sans-serif;
   background-color: #fff;
   color: #2e2f42;
+  letter-spacing: 0.02em;
 }
 .logo {
   font-family: "Raleway", sans-serif;
@@ -21,11 +22,9 @@ ul {
 }
 .link {
   text-decoration: none;
-  font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 150%;
-  letter-spacing: 0.02em;
   color: #2e2f42;
 }
 .link:hover {
@@ -36,11 +35,9 @@ ul {
   text-decoration: underline;
 }
 .contacts {
-  font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 150%;
-  letter-spacing: 0.02em;
   color: #434455;
   text-decoration: none;
 }
@@ -51,39 +48,83 @@ ul {
   background-color: #2e2f42;
 }
 .name-container {
-  font-family: "Roboto", sans-serif;
   font-weight: 700;
   font-size: 56px;
   line-height: 107%;
-  letter-spacing: 0.02em;
   text-align: center;
   color: #fff;
 }
 .button {
   background-color: #4d5ae5;
-  font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 150%;
   letter-spacing: 0.04em;
   color: #fff;
+  cursor: pointer;
 }
 .button:hover {
   background-color: #404bbf;
 }
 .name-benefit {
-  font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 20px;
   line-height: 120%;
-  letter-spacing: 0.02em;
   color: #2e2f42;
 }
 .text-benefit {
-  font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 150%;
-  letter-spacing: 0.02em;
   color: #434455;
+}
+.section-name {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 111%;
+  text-align: center;
+  color: #2e2f42;
+}
+.team-names {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 120%;
+  color: #2e2f42;
+}
+.team-position {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  color: #434455;
+}
+.portfolio-item {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 120%;
+  color: #2e2f42;
+}
+.portfolio-item-class {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  color: #434455;
+}
+.footer {
+  background-color: #2e2f42;
+}
+.footer-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  color: #f4f4fd;
+}
+.footer-logo {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 117%;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #f4f4fd;
+  text-decoration: none;
 }
