--- a/css/style.css
+++ b/css/style.css
@@ -147,6 +147,9 @@ ul {
   line-height: 117%;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #f4f4fd;
+  color: #4d5ae5;
   text-decoration: none;
+}
+.footer-logo-studio {
+  color: #f4f4fd;
 }
