--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,7 @@ ul {
   font-weight: 500;
   font-size: 20px;
   line-height: 120%;
+  letter-spacing: 0.02em;
   color: #2e2f42;
 }
 .text-benefit {
